--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </style>
     </head>
 
-    <body onload="main()">
+    <body>
         <!-- JS Jawaban 1 -->
         <div>
             <h1>Jawaban 1</h1>
